# SAV1

./: .clang-format  .gitignore  Makefile  README.md  README.txt  annotated.html  annotated_dup.js  classes.html  common_8h.html  common_8h.js  common_8h_source.html  dav4dplay  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  install_windows_deps.bat  log.txt  menudata.js  meson.build  meson_options.txt  navtreedata.js  navtreeindex0.js  sav1_8h.html  sav1_8h.js  sav1_8h_source.html  sav1__audio__frame_8h.html  sav1__audio__frame_8h.js  sav1__audio__frame_8h_source.html  sav1__settings_8h.html  sav1__settings_8h.js  sav1__settings_8h_source.html  (+20 more)
.github/workflows/: macos.yml  site.yml  ubuntu.yml  windows.yml
decode/: test.c
decode/dav1d/lib/: dav1d.exp  dav1d.lib
dependencies/dav1d/: note.txt
dependencies/licenses/: LICENSE.sav1.txt
dependencies/thread/: thread.h
docs/: Doxyfile
docs/resources/: headerFile
docs/resources/favicon/: site.webmanifest
examples/: dav3dplay.c  dav4dplay.c  sav1_no_SDL.c  sav1play.c  sav1play_debug.c  sav1slideshow.c
include/: common.h  sav1.h  sav1_audio_frame.h  sav1_settings.h  sav1_video_frame.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js  variables_c.js
src/: basic.c  convert_av1.cpp  convert_av1.h  custom_processing_audio.c  custom_processing_audio.h  custom_processing_video.c  custom_processing_video.h  decode_av1.c  decode_av1.h  decode_opus.c  decode_opus.h  integration.cpp  parse.cpp  parse.h  sav1.c  sav1_audio_frame.c  sav1_file_reader.cpp  sav1_file_reader.h  sav1_internal.c  sav1_internal.h  sav1_settings.c  sav1_video_frame.c  test.c  thread_manager.c  thread_manager.h  thread_queue.c  thread_queue.h  web_m_frame.c  web_m_frame.h  webm_frame.c  webm_frame.h
src/dav2dplay/: audio.c  audio.h  convert.c  convert.cpp  convert.h  decode.c  decode.h  main.c  parse.cpp  parse.h
src/dav3dplay/: convert_av1.cpp  convert_av1.h  custom_processing_audio.c  custom_processing_video.c  custom_processing_video.h  decode_av1.c  decode_av1.h  decode_opus.c  decode_opus.h  main.c  parse.cpp  parse.h  process_av1.c  process_av1.h  sav1_settings.c  sav1_settings.h  sav1_video_frame.h  thread_manager.c  thread_manager.h  thread_queue.c  thread_queue.h
subprojects/: deps.sha512  download.sh
test_files/: beach.webm  beach.xml  ferris.xml  grid-vp9.webm  grid.webm  grid.xml  opus_av1.webm  presentation.webm  sources.txt
tools/: mkv2xml.py  mkvparse.py  mkvparser.txt  rgb_parse.py
webm_parsing/: Makefile  basic.c  bytes_extractor.cpp  demo.cpp  integration.cpp
